src/app/combat/playercard/playercard.component.scss
.flip {
  transform: rotateY(180deg);
}

.right {
  @extend .flip;
}

.player-container {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  flex: 0 0 auto;
}

.agent-icon {
  z-index: 1;
  background-size: cover;
  background-position: 50% 50%;
  position: absolute;
  aspect-ratio: 1;
  height: 100%;
  top: 0;

  &.dead {
    @extend .agent-icon;
    filter: grayscale(1);
  }
}

.player-card {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  flex: 0 0 auto;
  z-index: 0;
}

.utility-container {
  align-items: flex-start;
  padding: 0px 0px 4px 18px;
  display: flex;
  flex-direction: column;
  width: 186px;
  height: 74px;
  justify-content: flex-end;
  gap: 4px;
  position: relative;
  border: 0px none;

  &.attacker {
    @extend .utility-container;
    background: linear-gradient(
      90deg,
      rgba(var(--attacker-color-secondary-rgb), 0.5) 0%,
      rgba(var(--attacker-color-rgb), 0.3) 58.5%,
      rgba(var(--attacker-color-rgb), 0.01) 90.5%,
      rgba(0, 0, 0, 0) 100%
    );
  }

  &.defender {
    @extend .utility-container;
    background: linear-gradient(
      90deg,
      rgba(var(--defender-color-shield-currency-rgb), 0.5) 0%,
      rgba(var(--defender-color-rgb), 0.2) 58.5%,
      rgba(var(--defender-color-rgb), 0.01) 90.5%,
      rgba(0, 0, 0, 0) 100%
    );
  }
}

.weapon-icon-wrapper {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  position: relative;
  flex: 0 0 auto;
}

.weapon-icon {
  position: relative;
  height: 32px;
  object-fit: cover;
  transform: rotateY(180deg);
}

.ultimate-tracker-container {
  display: inline-flex;
  height: 21.33px;
  width: 67%;
  align-items: center;
  gap: 20px;
  position: relative;
  // justify-content: center;
}

.spike-icon-wrapper {
  position: relative;
  align-items: center;
  display: inline-flex;
  justify-content: end;
  flex: 0 0 auto;
  justify-self: end;
}

.spike-icon {
  position: relative;
  width: 30px;
  aspect-ratio: 1;
}

.ultimate-tracker {
  width: 60%;
  display: inline-flex;
  align-items: center;
  gap: 1px;
  position: relative;
  flex: 0 0 auto;
  justify-content: center;
}

.pip-ultimate {
  position: relative;
  width: 10px;
  height: 10px;
  margin-right: -2px;
  background-image: url(/assets/misc/ultimate-pip.svg);
  background-size: 100% 100%;

  &-full {
    @extend .pip-ultimate;
    background-image: url(/assets/misc/ultimate-pip-full.svg);
  }
}

.ultimate-full-image {
  width: 25px;
  margin-left: auto;
  margin-right: auto;
}

.rank-icon-container {
  position: absolute;
  width: 30px;
  height: 30px;
  left: -48px;
  bottom: 0px;
  z-index: 2;
  background-size: cover;
  background-position: 50% 50%;
}

.rank-icon {
  height: 100%;
  aspect-ratio: 1;
}

.agent-icon-container {
  left: -44px;
  z-index: 1;
  position: absolute;
  height: 100%;
  top: 0;
}

.player-info {
  display: flex;
  flex-direction: column;
  width: 160px;
  height: 76px;
  align-items: flex-start;
  justify-content: flex-end;
  gap: 4px;
  padding: 0px 0px 2px 32px;
  position: relative;

  &.defender {
    @extend .player-info;
    background: linear-gradient(
        90deg,
        rgba(var(--defender-color-rgb), 0.3) 0%,
        rgba(var(--defender-color-rgb), 0) 100%
      ),
      rgba(15, 25, 35, 0.6);
  }

  &.attacker {
    @extend .player-info;
    background: linear-gradient(
        90deg,
        rgba(var(--attacker-color-rgb), 0.5) 0%,
        rgba(var(--attacker-color-rgb), 0) 100%
      ),
      rgba(15, 25, 35, 0.6);
  }

  &.observed {
    @extend .player-info;
    background: linear-gradient(90deg, rgba(225, 181, 22, 0.3) 0%, rgba(225, 181, 22, 0) 100%),
      rgba(15, 25, 35, 0.7);
  }

  &.dead {
    @extend .player-info;
    background: rgba(15, 25, 35, 0.6);
  }
}

.spectator-icon-container {
  position: absolute;
  top: 0;
  width: 18px;
  height: 20px;

  &.left {
    @extend .spectator-icon-container;
    left: 3px;
  }

  &.right {
    @extend .spectator-icon-container;
    right: 3px;
  }
}

.spectator-icon {
  width: 18px;
  aspect-ratio: 1;
}

.info-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-end;
  gap: 4px;
  position: relative;
  align-self: stretch;
  width: 100%;
  flex: 0 0 auto;
  top: -4px;
  left: 5px;
}

.shields-currency {
  display: inline-flex;
  height: 20px;
  align-items: flex-end;
  gap: 6px;
  position: relative;
}

.captain-icon {
  height: 17px;
  width: 17px;
  position: relative;
  flex: 0 0 auto;
}

.currency-container {
  display: inline-flex;
  align-items: center;
  gap: 2px;
  position: relative;
  flex: 0 0 auto;
}

.valorant-credits {
  position: relative;
  width: 8px;
  height: 8px;

  &.attacker {
    @extend .valorant-credits;
    fill: var(--attacker-color-shield-currency);
  }

  &.defender {
    @extend .valorant-credits;
    fill: var(--defender-color-shield-currency);
  }
}

.currency-title {
  position: relative;
  width: fit-content;
  margin-top: -1px;
  opacity: 0.8;
  font-family: "Montserrat", Helvetica;
  font-weight: 700;
  font-size: 11px;
  text-align: center;
  letter-spacing: 0;
  line-height: normal;
  white-space: nowrap;

  &.attacker {
    @extend .currency-title;
    color: var(--attacker-color-shield-currency);
  }

  &.defender {
    @extend .currency-title;
    color: var(--defender-color-shield-currency);
  }
}

.username-container {
  display: inline-flex;
  height: 15px;
  align-items: center;
  gap: 4px;
  position: relative;
}

.username-title {
  position: relative;
  width: fit-content;
  font-family: "Montserrat", Helvetica;
  font-weight: 600;
  color: #ffffff;
  font-size: 16px;
  letter-spacing: 0;
  line-height: normal;
  white-space: nowrap;
}

app-shield-icon {
  position: relative;
  width: 20px;
  height: 20px;
  flex: 0 0 auto;
}

.health-container {
  display: inline-flex;
  height: 20px;
  width: 62px;
  align-items: center;
  gap: 4px;
  position: relative;
  overflow: hidden;

  &.right {
    @extend .health-container;
    justify-content: flex-end;
  }
}

.health-amount {
  position: relative;
  width: fit-content;
  opacity: 0.8;
  font-family: "Montserrat", Helvetica;
  font-weight: 800;
  font-size: 20px;
  text-align: center;
  letter-spacing: 0;
  line-height: normal;
  white-space: nowrap;

  &.attacker {
    @extend .health-amount;
    color: var(--attacker-color-shield-currency);
  }

  &.defender {
    @extend .health-amount;
    color: var(--defender-color-shield-currency);
  }
}

.health-bar {
  position: absolute;
  height: 3px;
  left: 0;
  bottom: 0;
  transition: width 0.2s ease-out;

  &.attacker {
    @extend .health-bar;
    background-color: var(--attacker-color-shield-currency);
  }

  &.defender {
    @extend .health-bar;
    background-color: var(--defender-color-shield-currency);
  }
}

.abilities {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

